# UROV2018

./: .gitignore  Comunication Protocol.txt  Controls.txt  readme.md
Arduino/: Accelerometer.cpp  Accelerometer.h  Adafruit_BNO055.cpp  Adafruit_BNO055.h  Arduino.ino  CMakeLists.txt  Ignore_Arduino.ino  Math.cpp  Math.h  README.txt  Settings.h  VectorMotors.cpp  VectorMotors.h  cameras.cpp  cameras.h  dataStruc.h  gyroAccelerometer.cpp  gyroAccelerometer.h  pressure.cpp  pressure.h  toolMotor.cpp  toolMotor.h
Arduino Tests/ArduinoNoTether/: Accelerometer.h  Math.cpp  VectorMotors.h  dataStruc.h  gyroAccelerometer.cpp  pressure.cpp  pressure.h
Arduino Tests/tool_motor_test/: toolMotor.cpp  tool_motor_test.ino
Arduino/Ignore/: Ignore_Arduino.ino
ArduinoNoTether/: Accelerometer.cpp  ArduinoNoTether.ino  Math.h  VectorMotors.cpp  cameras.cpp  cameras.h  gyroAccelerometer.h
Arduino_ESP/: MATE2018_OBS.ino  README.md  connection_test.ino
Arduino_ESP/MATE2018_OBS/: MATE2018_OBS.ino
Arduino_ESP/connection_test/: connection_test.ino
Top-Level UI/: ArtificialHorizon.py  Autopilot.py  DataHandling.py  README  Showcase  UIUtils.py  controller.py  main.py  serial_finder.py  test_controller.py
Top-Level UI/UI/: README  UIUtils.py
raspi/: wifi_login
raspi/UI_p2/: ArtificialHorizon.py  main.py
raspi/UI_p3/: ArtificialHorizon.py  Autopilot.py  DataHandling.py  README  UIUtils.py  controller.py  main.py  test_controller.py
raspi/old_UI/: new_readme.md
raspi/old_UI/UI/: Autopilot.py  DataHandling.py  Showcase  controller.py  (+2 more)
raspi/serial_test/: serial_test.py
